# vista-mvp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  spec-v0.md  spec-v1.md
app/: config.py  extraction.py  graph.py  llm.py  main.py  nodes.py  server.py  state.py
fixtures/: clean_email.json  messy_email.json  prior_ref_email.json
tests/: test_extraction.py
