[project]
name = "quick-quotes"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.0.0",
    "langgraph>=1.2.7",
    "pydantic>=2",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
